welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:-30: error: Unmatched closing brace '}' ignored here
	}
        ^Runner:-29: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Runner:-26: error: illegal start of statement (no modifiers allowed here)
	override def backward() {
        ^Runner:-15: error: illegal start of statement (no modifiers allowed here)
	override def forward() {
        ^Runner:1: error: illegal start of statement (no modifiers allowed here)
	override def run() {
        ^